--- a/src/components/Headline.astro
+++ b/src/components/Headline.astro
@@ -1,4 +1,4 @@
-<h2 class="w-fit font-alien text-sm sm:text-xl lg:text-2xl text-center whitespace-nowrap">
+<h2 class="w-full lg:w-fit font-alien text-sm sm:text-xl lg:text-2xl text-center whitespace-nowrap">
     <span class="text-purple">La </span> 
     <span class="text-yellow">Borne</span> 
     qu’il vous faut!
