--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,7 @@ const { title } = Astro.props;
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet"> -->
 		<!-- <link rel="preload" as="font" href="/fonts/Montserrat.ttf" type="font/ttf" /> -->
+		<link rel="sitemap" href="/sitemap-index.xml" />
 		<link rel="preload" as="font" href="/fonts/Alien Robot.ttf" type="font/ttf" crossorigin="anonymous"/>
 		<link rel="preload" as="font" href="/fonts/Montserrat.ttf" type="font/ttf" crossorigin="anonymous"/>
 		<link rel="prefetch" as="image" href="/img/backgrounds/bg_shape_top.webp" type="image/webp" crossorigin="anonymous"/>
