--- a/src/pages/informations.astro
+++ b/src/pages/informations.astro
@@ -21,7 +21,7 @@ import H1 from '../components/H1.astro';
 
 
     <Section c="relative mt-20 ml-20">
-        <H1 text="Mentions légales" />
+        <H1 text="Informations utiles" />
         <div class="flex gap-10 justify-between">
             <div class="link-svg ">
                 <div class="absolute -top-10 -right-[14px]">
@@ -44,7 +44,7 @@ import H1 from '../components/H1.astro';
 
 
     <Section>
-        <div class="lg:max-w-4xl lg:ml-15 font-medium leading-[142%] text-sm">
+        <div class="lg:mx-15 font-medium leading-[142%] text-sm">
 
             <h2 class="flex flex-col font-bold mx-auto w-fit mb-5">
                 <span>Les chargeurs</span>
