--- a/src/pages/particuliers.astro
+++ b/src/pages/particuliers.astro
@@ -12,7 +12,7 @@ import H1 from '../components/H1.astro';
 import Dropdown from '../components/dropdown.vue';
 
 
-const cards = [
+const houseCards = [
     {html: '<span class="text-purple">TVA 5.5 %</span> si le logement a <span class="text-purple">plus de 2 ans</span>',},
     {html: '<span class="text-purple">TVA 20%</span> si le logement a <span class="text-purple">moins de 2 ans</span>',},
     {html: 'Installation <span class="text-purple">garantie dans la journée',},
@@ -24,16 +24,57 @@ const cards = [
     {html: '<a href="/informations" class="link-effect spacing">Informations utiles</a>',},
 ]
 
+const appartementCardsOne = [
+    {html: '<span class="text-purple">TVA 5.5 %</span>',},
+    {html: 'Installation <span class="text-purple">garantie dans la journée',},
+    {html: `Visite technique <br> Bureau d'étude <br> Devis 48H`},
+    {html: 'Matériel et installation <span class="text-purple">assurés et garantie par Preezeo</span>',},
+    {html: 'Pour locataire et propriétaire',},
+    {html: 'Professionnel exerçant à domicile: <span class="text-purple">TVA 5.5% + Prime ADVENIR plafond de 2000 euros</span>',},
+    {html: '<a href="/subventions" class="mx-5 link-effect spacing">Tout savoir sur les Subventions</a>',},
+    {html: '<a href="/informations" class="link-effect spacing">Informations utiles</a>',},
+]
+
+const appartementCardsTwo = [
+    {html: '<span class="text-purple">TVA 5.5 %</span>',},
+    {html: 'Installation <span class="text-purple">garantie 1 à 3 jours',},
+    {html: `Visite technique <br> Bureau d'étude <br> Devis 48H`},
+    {html: 'Matériel et installation <span class="text-purple">assurés et garantie par Preezeo</span>',},
+    {html: 'Locataire ou propriétaire <br> Pour usage <span class="text-purple">individuel</span>',},
+    {html: 'Professionnel exerçant à domicile: <span class="text-purple">TVA 5.5% + Prime ADVENIR plafond de 2000 euros</span>',},
+    {html: '<a href="/subventions" class="mx-5 link-effect spacing">Tout savoir sur les Subventions</a>',},
+    {html: '<a href="/informations" class="link-effect spacing">Informations utiles</a>',},
+]
 
 const cardSelect = [
     {text: 'Une maison', icon: '/img/icons/flat_house.svg', value:'house'},
     {text: 'Un appartement', icon: '/img/icons/flat_appartement.svg', value:'appartement'},
 ]
+
+const bigCards = [
+    {title: 'Borne partagée', 
+        text: `
+            Dans ce cas, <span class="text-purple">plusieurs appartements partagent une même prise de recharge</span>. 
+            Cela peut être une solution pratique si le nombre de résidents souhaitant recharger leur véhicule est limité. 
+            Les avantages de la prise partagée incluent des <span class="text-purple">coûts d'installation initiaux réduits et une gestion simplifiée</span>.             
+            <br>
+            Cependant, il peut y avoir des contraintes en termes de disponibilité de la prise et de temps de charge partagé entre les utilisateurs.
+        `
+    },
+    {title: 'Borne individuelle', 
+        text: `
+            L'installation d'une prise individuelle dans chaque appartement offre une solution plus personnalisée et flexible. 
+            <span class="text-purple">Chaque résident dispose de sa propre prise de recharge</span>, ce qui lui permet de recharger son véhicule à tout moment, 
+            sans dépendre des autres résidents. <span class="text-purple">Cela garantit une disponibilité constante et évite les éventuels conflits d'utilisation</span>. 
+            Toutefois, cela peut nécessiter des travaux d'installation plus importants et des coûts plus élevés pour chaque résident.
+        `
+    }
+]
 ---
 <script>
     const cardSelect = [...document.querySelectorAll('.card-select')]
     const viewsWrapper = document.querySelector('.views-wrapper')
-    let activeCard = 'house'
+    let activeCard = 'appartement'
     cardSelect[0]?.classList.add('active')
     cardSelect.forEach(item => {
         item.addEventListener('click', (e) => {
@@ -87,37 +128,45 @@ const cardSelect = [
             <div class="flex flex-col gap-6 lg:-translate-y-1/2">
                 <p class="font-bold">J'habite dans :</p>
                 <div class="grid grid-cols-2 gap-4 md:gap-6 items-stretch">
-                    <CardSelect items={cardSelect} />
+                    <CardSelect items={cardSelect} transition:persist />
                 </div>
             </div>
         </div>
     </Section>
 
 
-    <div class="views-wrapper" data-active="house">
+    <div class="views-wrapper xl:ml-20" data-active="appartement" transition:persist>
         <div class="house-view">
             <Section flex={true}>
                 <Tips
-                    title="Le crédit d'impôts"
+                    title="Le crédit d'impôts et taux de TVA réduit"
                 >
                     <p 
                         slot="text"
                         class="inline gap-1"
                     >
-                        <span class="font-medium text-[19px] tracking-3 leading-[142%]">
-                            <span class="text-purple">Le crédit d’impôts</span> pour la transition énergétique permet aux propriétaires et locataires d’une <span class="text-purple">résidence principale</span> de déduire jusqu’à <span class="text-purple">300 euros</span> des dépenses liées à l’acquisition d’une borne de recharge pour véhicules électriques installée à domicile.
+                        <span class="font-medium text-[15px] tracking-3 leading-[142%]">
+                            <span class="text-purple">Le crédit d’impôts</span> 
+                            pour la transition énergétique permet aux propriétaires et locataires d’une 
+                            <span class="text-purple">résidence principale</span> de déduire jusqu’à
+                            <span class="text-purple">300 euros</span> des dépenses liées à l’acquisition 
+                            d’une borne de recharge pour véhicules électriques installée à domicile.
+                            <br>
+                            Depuis le 1er janvier 2023, la TVA à 5,5% a été entendue et est désormais disponible pour tous les logements. 
+                            L’attestation de TVA, permettant de confirmer que le bâtiment est achevé depuis plus de 2 ans, 
+                            n’est donc plus nécessaire.
                         </span>
                     </p>
                 </Tips>
             </Section>
         
             <Section smallBottomMargin={true}>
-                <div class="flex flex-col gap-2 mb-10 lg:ml-20">
+                <div class="flex flex-col gap-2 mb-10">
                     <h2 class="text-base font-bold">Vous habitez une maison individuelle</h2>
                     <span class="bg-purple h-[4px] w-[200px] block"></span>
                 </div>
                 <div class=`lg:grid lg:grid-cols-3 gap-4 max-w-[880px] mx-auto flex overflow-x-scroll scrollbar-hide w-[100vw] -translate-x-[5vw] snap-x snap-mandatory px-10`>
-                    {cards.map((item) => (
+                    {houseCards.map((item) => (
                         <div class="flex items-center justify-center snap-center">
                             <Card 
                                 color="light"
@@ -146,7 +195,7 @@ const cardSelect = [
                         slot="text"
                         class="inline gap-1"
                     >
-                        <span class="font-medium text-[19px] tracking-3 leading-[142%]">
+                        <span class="font-medium text-[15px] tracking-3 leading-[142%]">
                             En moyenne et sur une base de la tarification réglementée de vente (TRV), le coût d’une recharge en heures creuses pour <span class="text-purple">100 km d’autonomie (consommation de 15kWh/100km) est d’environ 2 euros et 3 euros en heures pleines.</span>
                             <br>
                             Plus la puissance est importante, moins long sera le temps de recharge. Cela dépend aussi de votre chargeur embarqué dans votre véhicule électrique. 
@@ -158,7 +207,91 @@ const cardSelect = [
         </div>
 
         <div class="appartement-view">
-            <p>Appartement section, <b>Work in progress</b></p>
+            <Section smallBottomMargin={true}>
+                <p class="relative text-[15px] tracking-[0.03em] leading-[142%] max-w-[600px] font-montserrat font-medium">
+                    Lorsqu'il s'agit de la recharge des véhicules électriques dans <span class="text-yellow font-semibold">un appartement au sein d'une copropriété</span>, deux options sont généralement envisagées :
+                    <span class="text-purple font-semibold">La borne partagée et la borne individuelle.</span>
+                    <br>
+                    <br>
+                    <br>
+                    Voici les caractéristiques et avantages de chaque solution :
+                </p>
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 mx-auto mt-6 w-full lg:ml-6">
+                    {bigCards.map((item) => (
+                        <article class="flex flex-1 gap-3 relative flex-col rounded-lg p-6 border border-purple bg-light-purple">
+                            <h3 class="font-montserrat font-semibold text-[15px] text-purple">{item.title}</h3>
+                            <p class="text-sm text-metal font-medium" set:html={item.text}></p>
+                        </article>
+                    ))}
+                </div>
+            </Section>
+            <Section smallBottomMargin={true}>
+                <div class="flex flex-col gap-2 mb-10">
+                    <h2 class="text-base font-bold">Borne de recharge à usage partagé par les copropriétaires</h2>
+                    <span class="bg-purple h-[4px] w-[200px] block"></span>
+                </div>
+                <div class=`lg:grid lg:grid-cols-3 gap-4 max-w-[880px] mx-auto flex overflow-x-scroll scrollbar-hide w-[100vw] -translate-x-[5vw] snap-x snap-mandatory px-10`>
+                    {appartementCardsOne.map((item) => (
+                        <div class="flex items-center justify-center snap-center">
+                            <Card 
+                                color="light"
+                                shadow={true}
+                                border={true}
+                            >  
+                                <div slot="content" class="flex flex-col align-center justify-center gap-2 h-[160px] min-w-[160px]">
+                                    <h3 class="font-montserrat font-bold text-sm text-center" set:html={item.html}></h3>
+                                </div>
+                            </Card>
+                        </div>
+                    ))}
+                </div>
+            </Section>
+            <Section flex={true} smallBottomMargin={true}>
+                <ButtonContact />
+            </Section>
+            <Section smallBottomMargin={true}>
+                <div class="flex flex-col gap-2 mb-10">
+                    <h2 class="text-base font-bold">Borne de recharge à usage individuel</h2>
+                    <span class="bg-purple h-[4px] w-[200px] block"></span>
+                </div>
+                <div class=`lg:grid lg:grid-cols-3 gap-4 max-w-[880px] mx-auto flex overflow-x-scroll scrollbar-hide w-[100vw] -translate-x-[5vw] snap-x snap-mandatory px-10`>
+                    {appartementCardsTwo.map((item) => (
+                        <div class="flex items-center justify-center snap-center">
+                            <Card 
+                                color="light"
+                                shadow={true}
+                                border={true}
+                            >  
+                                <div slot="content" class="flex flex-col align-center justify-center gap-2 h-[160px] min-w-[160px]">
+                                    <h3 class="font-montserrat font-bold text-sm text-center" set:html={item.html}></h3>
+                                </div>
+                            </Card>
+                        </div>
+                    ))}
+                </div>
+            </Section>
+            <Section flex={true} smallBottomMargin={true}>
+                <ButtonContact />
+            </Section>
+            <Section flex={true}>
+                <Tips>
+                    <p 
+                        slot="text"
+                        class="inline gap-1"
+                    >
+                        <span class="font-medium text-[15px] tracking-3 leading-[142%]">
+                            Il est important de noter que le choix entre <span class="text-yellow">une prise partagée</span> et <span class="text-yellow">une prise individuelle</span>
+                            dépend des contraintes spécifiques de la copropriété, du nombre de résidents intéressés 
+                            par la recharge des véhicules électriques et des ressources disponibles. 
+                            Il est recommandé d'engager des discussions au sein de la copropriété et de consulter 
+                            des professionnels de l'énergie et de l'électricité pour prendre la décision la plus 
+                            adaptée à la situation.
+
+                        </span>
+                    </p>
+                </Tips>
+            </Section>
+        
         </div>
     </div>
 
