--- a/src/pages/prices.astro
+++ b/src/pages/prices.astro
@@ -44,9 +44,9 @@ import H1 from '../components/H1.astro';
 
 
     <Section>
-        <div class="flex justify-center gap-10 text-metal">
+        <div class="flex flex-col lg:flex-row justify-center gap-10 text-metal">
             <div class="flex flex-col max-w-[450px] p-6 bg-light-purple border border-purple rounded-lg">
-                <h2 class="text-3xl mb-6">Les étapes</h2>
+                <h2 class="text-purple text-3xl mb-6">Les étapes</h2>
                 <p class="font-medium">
                     Suite à la visite technique de notre technicien à votre domicile et après quelques questions, notre bureau 
                     d’étude réalisera les calculs nécessaires. 
@@ -59,7 +59,7 @@ import H1 from '../components/H1.astro';
                 </p>
             </div>
             <div class="flex flex-col max-w-[450px] p-6 bg-light-purple border border-purple rounded-lg">
-                <h2 class="text-3xl mb-6">Le coût</h2>
+                <h2 class="text-purple text-3xl mb-6">Le coût</h2>
                 <p class="font-medium">
                     Mettre en place une borne de recharge à domicile engendre un certain coût, lequel sera conditionné par 
                     différents éléments. L'installation basique de la station de recharge requiert généralement un budget compris 
