--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -2,29 +2,31 @@
 import Image from "../components/atom/Image.astro";
 
 const linksFirstColumn = [
-    {name: 'Contact', link: '#'},
-    {name: 'Qui sommes nous', link: '#'},
-    {name: 'En savoir plus', link: '#'},
+    {name: 'Contact', link: '/contact'},
+    {name: 'Qui sommes nous', link: '/about'},
+    {name: 'Financement', link: '/funding'},
+    {name: 'Informations Utiles', link: '/informations'},
     {name: 'FAQ', link: '#'},
 ]
 
 const linksSecondColumn = [
     {name: 'Particulier', link: '/particuliers'},
-    {name: 'Infrastructure collective', link: '/particuliers'},
+    {name: 'Infrastructure collective', link: '/infrastructure'},
     {name: 'Professionnel', link: '/professionnels'},
-    {name: 'Services', link: '/services'},
+    {name: 'Installation et Maintenance', link: '/installation'},
+    {name: 'Tarifs', link: '/prices'},
+    {name: 'Produits', link: '/products'},
 ]
 
 const subLinks = [
-    {name: 'Plan du site', link: '#'},
+    {name: 'Plan du site', link: '/sitemap-index.xml'},
     {name: 'Mentions légales', link: '/legals'},
-    {name: 'Crédits', link: '#'},
 ]
 ---
 
 <footer class="flex flex-col align-stretch text-blue">
     <div class="bg-burgundy">
-        <div class="wrapper flex justify-between items-center">
+        <div class="wrapper flex flex-col gap-12 lg:gap-0 lg:flex-row justify-between lg:items-center">
             <div class="flex flex-col gap-2">
                 <a href="/" class="flex justify-center items-center w-[150px]">
                     <Image 
@@ -33,26 +35,28 @@ const subLinks = [
                         fetchPriority={true}
                     />
                 </a>
-                <h4 class="leading-8">57 avenue du marechal Juin <br>64500 Biarritz</h4>
+                <a href="https://www.google.fr/maps/place/57+Av.+du+Mar%C3%A9chal+Juin,+64200+Biarritz/@43.470901,-1.5429779,17z/data=!3m1!4b1!4m6!3m5!1s0xd51153581b41ef9:0xf7cc06159a644b4!8m2!3d43.4708971!4d-1.540403!16s%2Fg%2F11bw44dfs2?entry=ttu" target="_blank">
+                    <h4 class="leading-8">57 avenue du Marechal Juin <br>64500 Biarritz</h4>
+                </a>
             </div>
-            <nav class="flex items-stretch gap-7 2xl:gap-14">
-                <ul class="flex flex-col gap-2">
+            <nav class="w-full lg:w-fit flex items-stretch gap-7 2xl:gap-14">
+                <ul class="flex flex-col gap-4">
                     {linksFirstColumn.map((item) => (
-                        <li><a href={item.link}>{item.name}</a></li>
+                        <li><a href={item.link} class="duration-100 hover:opacity-80 after:w-0 relative hover:after:w-full after:duration-300 after:h-[1px] after:bg-light after:absolute after:-bottom-1 after:left-0">{item.name}</a></li>
                     ))}
                 </ul>
                 <span class="bg-purple w-2px"></span>
-                <ul class="flex flex-col gap-2">
+                <ul class="flex flex-col gap-4">
                     {linksSecondColumn.map((item) => (
-                        <li><a href={item.link}>{item.name}</a></li>
+                        <li><a href={item.link} class="duration-100 hover:opacity-80 after:w-0 relative hover:after:w-full after:duration-300 after:h-[1px] after:bg-light after:absolute after:-bottom-1 after:left-0">{item.name}</a></li>
                     ))}
                 </ul>
             </nav>
         </div>
     </div>
     <div class="bg-deep-blue py-5">
-        <div class="wrapper flex justify-between items-center">
-            <div class="wrapper flex items-center gap-3">
+        <div class="wrapper flex flex-col-reverse gap-5 lg:gap-0 lg:flex-row justify-between items-center">
+            <div class="wrapper flex items-center justify-center lg:justify-start gap-2">
                 <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_1342_348)">
                     <path d="M10.2776 4.97408C7.50879 5.12513 5.38722 7.48282 5.5389 10.2401C5.6906 12.9974 8.05811 15.1102 10.8269 14.9591C12.1184 14.8886 13.3291 14.3101 14.1923 13.3508L14.2601 13.2755C14.5685 12.9327 14.5395 12.4059 14.1953 12.0987C13.8511 11.7916 13.3221 11.8205 13.0137 12.1632L12.946 12.2385C12.3789 12.8686 11.5837 13.2486 10.7353 13.295C8.88946 13.3956 7.31114 11.9871 7.21001 10.149C7.10888 8.31074 8.52326 6.73895 10.3691 6.63824C11.2175 6.59196 12.0496 6.88319 12.6824 7.44788L12.758 7.51534C13.1022 7.82249 13.6312 7.79363 13.9397 7.45088C14.248 7.10812 14.2191 6.58128 13.8749 6.27413L13.7993 6.20666C12.8359 5.34698 11.5692 4.90361 10.2776 4.97408Z" fill="#E1FFF9"/>
@@ -64,12 +68,12 @@ const subLinks = [
                     </clipPath>
                     </defs>
                 </svg>
-                <h3 class="text-sm">Preezeo</h3>
+                <h3 class="text-sm">Preezeo 2023 by Touch Of Pixels</h3>
             </div>
             <nav class="flex items-center gap-7 2xl:gap-14">
                 <ul class="flex items-center gap-4 whitespace-nowrap 2xl:gap-8">
                     {subLinks.map((item) => (
-                        <li><a href={item.link}>{item.name}</a></li>
+                        <li><a class="duration-100 hover:opacity-80" href={item.link}>{item.name}</a></li>
                     ))}
                 </ul>
             </nav>
