--- a/src/pages/infrastructures.astro
+++ b/src/pages/infrastructures.astro
@@ -59,7 +59,7 @@ const cards = [
 
     <Section c="lg:px-6">
         <div class="flex flex-col gap-10 lg:px-20">
-            <p class="font-medium text-xl">Dans une copropriété, la mise en place d'une <span class="text-purple font-semibold">infrastructure de recharge collective</span>
+            <p class="font-medium text-[19px]">Dans une copropriété, la mise en place d'une <span class="text-purple font-semibold">infrastructure de recharge collective</span>
             <br> pour les véhicules électriques présente de nombreux avantages.
             <br><br>
             Voici les principaux points à considérer :
@@ -111,7 +111,7 @@ const cards = [
                 <span class="font-medium text-[19px] tracking-3 leading-[142%]">
                     Le montant maximal d’aide versée est fixé pour les infrastructures collectives (hors travaux de voirie extérieur) à 4000 euros jusqu’à 50 places. Augmenté de 75 euros par place supplémentaire. 
                     Dans la limité de 15 000 euros au total par copropriété. 
-                    <br><a href="/informations" class="font-semibold link-effect spacing">Téléchargez le guide du gouvernement</a>
+                    <br><a href="https://www.ecologie.gouv.fr/" target="_blank" class="font-semibold link-effect spacing">Téléchargez le guide du gouvernement</a>
                 </span>
             </p>
         </Tips>
