--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -142,7 +142,7 @@ const products = [
             <div class="w-fit grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 lg:gap-6">
                 {products.map((item) => (
                     <div class="flex flex-col gap-4 p-4 border-2 border-dotted border-purple lg:p-8 lg:max-w-[450px]">
-                        <a href={item.link} target="_blank" class="duration-300 max-w-[80px] max-h-[80px] hover:opacity-70">
+                        <a href={item.link} target="_blank" class="duration-300 w-fit max-w-[120px] max-h-[70px] hover:opacity-70">
                             <Image 
                                 src={`/img/partners/${item.name.toLowerCase()}.png`}
                                 alt={`${item.name}'s logo`}
