--- a/src/components/ProjectStripe.astro
+++ b/src/components/ProjectStripe.astro
@@ -27,7 +27,7 @@ import Button from './atom/Button.astro';
             </span>
             <span class="font-montserrat font-medium text-sm leading-1">étudie chaque configuration.</span>
         </p>
-        <div class="w-1/2">
+        <div class="lg:w-1/2">
             <Button 
                 text="Mon étude"
                 color="blue"
