--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -111,7 +111,7 @@ const defaultCards = [
 
     <Section c="lg:hidden mt-8" flex={true}>
         <div class="flex flex-wrap gap-2 items-stretch justify-center">
-            <a href="/particulier" class="border border-purple text-center rounded-md p-4 flex flex-[calc(50%-5px)] w-[calc(50%-5px)] max-w-[calc(50%-5px)] flex-col items-center justify-center gap-2">
+            <a href="/particuliers" class="border border-purple text-center rounded-md p-4 flex flex-[calc(50%-5px)] w-[calc(50%-5px)] max-w-[calc(50%-5px)] flex-col items-center justify-center gap-2">
                 <div class="w-[25px] h-[25px]">
                     <Image 
                         src="/img/icons/house.svg" 
@@ -121,7 +121,7 @@ const defaultCards = [
                 </div>
                 <h3 class="flex font-semibold tracking-3 line-clamp-2 text-sm font-montserrat">Particulier</h3>
             </a>
-            <a href="/professionnel" class="border border-purple text-center rounded-md p-4 flex flex-[calc(50%-5px)] w-[calc(50%-5px)] max-w-[calc(50%-5px)] flex-col items-center justify-center gap-2">
+            <a href="/professionnels" class="border border-purple text-center rounded-md p-4 flex flex-[calc(50%-5px)] w-[calc(50%-5px)] max-w-[calc(50%-5px)] flex-col items-center justify-center gap-2">
                 <div class="w-[25px] h-[25px]">
                     <Image 
                         src="/img/icons/building.svg" 
